[Improve]Improve gc params